Better alignment of items on mobile, fixed nav items not showing active link

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -73,6 +73,7 @@ section {
 	height: 110px;
 	width: 100%;
 	z-index: 999;
+	padding: unset;
 }
 .navbar,
 .navbar * {
@@ -288,6 +289,7 @@ section {
 	top: 35px;
 	left: 35px;
 	transition: all 0.5s ease;
+	z-index: 1;
 }
 .mobile-nav .logo:hover {
 	text-decoration: none;
@@ -303,7 +305,7 @@ section {
 	position: absolute;
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
-    bottom: -29px;
+    bottom: -34px;
     left: 34px;
     font-size: 14px;
     color: #6b6b6b;
@@ -327,6 +329,7 @@ section {
 .mobile-nav .nav-link {
 	color: #000;
 	transition: all 0.5s ease;
+	padding-top: 0;
 }
 .mobile-nav .nav-link:hover {
 	color: #d7212e;
@@ -1050,21 +1053,23 @@ section.client-centre {
 	width: 130px;
 }
 .hidden-forms .transparent-btn:after {
-	content: url(../img/general/arrow-left.svg);
-	width: 20px;
-	height: 18px;
-	position: absolute;
-	top: 50%;
-	left: 2px;
-	transform: translate(0%, -50%);
-	margin-top: 1px;
-	color: #d7212e;
-	font-size: 20px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: left 0.2s ease;
-	pointer-events: all;
+	content: "";
+    background: url(../img/general/arrow-left.svg);
+    background-size: cover;
+    width: 19px;
+    height: 16px;
+    position: absolute;
+    top: 50%;
+    left: 12px;
+    transform: translate(0%, -50%);
+    margin-top: 1px;
+    color: #d7212e;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: left 0.2s ease;
+    pointer-events: all;
 }
 
 .hidden-forms .transparent-btn.disable {
@@ -1072,7 +1077,7 @@ section.client-centre {
 }
 /*HOVER EFFECT ON BUTTON ARROW*/
 .hidden-forms .transparent-btn:hover:after {
-	left: -2px;
+    left: 7px;
 }
 
 /*-----TERMS OF ENGAGEMENT-----*/
@@ -1467,16 +1472,17 @@ section.client-centre {
 	    height: 100px;
 	}
 	.navbar .container {
-		padding: 0px 5px 10px;
+		padding: 0px 40px 10px;
 	}
 	.mobile-nav .logo img,
+	footer .logo,
 	.navbar-brand img,
 	.navbar-brand {
 		height: auto;
 	}
 	.navbar .navbar-brand p {
 		bottom: -30px;
-	    left: 38px;
+	    left: 29px;
 	}
 
 	/*MOBILE NAV*/
@@ -1484,7 +1490,7 @@ section.client-centre {
 	    top: 25px;
 	}
 	.mobile-nav .logo p {
-	    left: 33px;
+	    left: 29px;
 	}
 	.mobile-nav .close-btn {
 	    top: 30px;
@@ -1616,15 +1622,37 @@ section.client-centre {
 		font-size: 45px;
 	}
 
+	/*NAV*/
+	.navbar .container {
+		padding: 0px 20px 10px;
+	}
+	.mobile-nav .logo img,
+	.navbar-brand img,
+	footer .logo,
+	.navbar-brand {
+		width: 300px;
+	}
+
 	/*MOBILE NAV*/
 	.mobile-nav {
 		width: 100%;
 		right: calc(-100% - 5px);
 	}
+	.mobile-nav .logo {
+	    left: 20px;
+	}
+	.mobile-nav .logo p {
+	    left: 29px;
+	    bottom: -32px;
+	    font-size: 12px;
+	}
+	.mobile-nav .close-btn {
+	    top: 33px;
+	}
 	.mobile-nav .vertical-align {
 		display: flex;
 		flex-wrap: wrap;
-	    padding: 120px 0px 50px 30px;
+	    padding: 120px 0px 50px 13px;
 	    position: relative;
 	    transform: unset;
 	    top: unset;
@@ -1632,11 +1660,12 @@ section.client-centre {
 	}
 	.mobile-nav .nav,
 	.mobile-nav .contact-items {
-		flex-basis: 50%;
+		flex-basis: 45%;
 	}
 	.mobile-nav .contact-item {
 		height: 55px;
 	}
+	
 	/*HERO STYLES*/
 	.parallax-window .banner-text {
 	    text-align: left;
@@ -1742,9 +1771,6 @@ section.client-centre {
 	footer .copy-text {
 		margin-top: 15px;
 	}
-	footer .logo {
-		width: 300px;
-	}
 }
 @media only screen and (max-width: 479px){
 	/*NAV*/
@@ -1758,17 +1784,6 @@ section.client-centre {
 	    font-size: 12px;
 	}
 	/*MOBILE NAV*/
-	.mobile-nav .logo {
-	    left: 20px;
-	}
-	.mobile-nav .logo p {
-	    left: 26px;
-	    bottom: -32px;
-	    font-size: 12px;
-	}
-	.mobile-nav .close-btn {
-	    top: 33px;
-	}
 	.mobile-nav .vertical-align {
 		display: block;
 	    padding-left: 10px;
@@ -1841,5 +1856,46 @@ section.client-centre {
 	}
 	footer .copy-text {
 		margin-top: 30px;
+	}
+}
+/*LANDSCAPE FOR LARGE PHONES*/
+@media only screen and (max-height: 400px){
+	/*MOBILE NAV*/
+	.mobile-nav .logo {
+	    left: 20px;
+	}
+	.mobile-nav .logo p {
+	    left: 29px;
+	    bottom: -32px;
+	    font-size: 12px;
+	}
+	.mobile-nav .close-btn {
+	    top: 33px;
+	}
+	.mobile-nav .vertical-align {
+		display: flex;
+		flex-wrap: wrap;
+	    padding: 120px 0px 50px 13px;
+	    position: relative;
+	    transform: unset;
+	    top: unset;
+	    left: unset;
+	}
+	.mobile-nav .nav,
+	.mobile-nav .contact-items {
+		flex-basis: 45%;
+	}
+
+	/*HERO CONTAINER*/
+	.parallax-window .hero-container {
+	    margin-top: 50px;
+	}
+
+	/*FOOTER*/
+	footer .container {
+	    padding: 40px 20px 15px;
+	}
+	footer .footer-video__overlay {
+	    background: rgb(27 27 27 / 0.85);
 	}
 }
